# devenv

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust-clippy.yml
files/: .drone.yml.dotnet  .drone.yml.rust  Dockerfile.dotnet  Dockerfile.rust  Justfile
src/: config.rs  create.rs  files.rs  generate.rs  main.rs
