[package]
name = "devenv"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "An application for settung up new projects/environments based on templates."
authors = ["Lyssietn <lys@lys.ee>"]
homepage = "https://github.com/lyssieth/devenv"
repository = "https://github.com/lyssieth/devenv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
cached = "0.42.0"
color-eyre = "0.6.2"
dirs = "4.0.0"
paris = { version = "1.5.13", features = ["macros", "no_logger"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
tinytemplate = "1.2.1"
